--- a/SALON/css/style.css
+++ b/SALON/css/style.css
@@ -1,36 +1,66 @@
 body {
-    
-    color:#fff;
-    margin: 0;
-    padding: 0;
-    font-family: 'Oswald',sans-serif;
-
+  padding: 0;
+  margin: 0%;
+  width:100%;
+  background-color: #000;
+  color:white
+  
 }
 
-nav ul {
-    background-color: black;
-    text-align: center;
-    margin: 0;
-    padding: 0;
+header { background-color: white;
+}
+header img {
+ width: 80%;
+ height:300px ;
+display: block;
+ 
+
+ margin-left:auto;
+ margin-right: auto;
+ padding-top: 50px;
+ padding-bottom: 25px;
+
+
 
 }
-nav li {
-    font-size: 1.2em;
-    height: 40px;
-    display: inline-block;
-    margin:2%;
+#about { width: 60%;
+margin-left: auto;
+margin-right: auto;}
+#about img{height:200px;width:200px; }
+#about h2 {text-align:center;}
+nav ul { padding: 0; margin:0;
+text-align: center;
+list-style: none;}
+nav li { font-size:1.5em; line-height:80px; 
+height:40px;
+ margin-left:auto; 
+ margin-right:auto; padding-top:10px; text-align: center;
+ text-decoration: none;
+display: inline;
+margin:2.5%;
+ 
+ width:auto;}
+   nav a {color:#fff; font-style:italic; text-decoration: none;}
+ 
+a:hover{color:#000;background-color:white;}
+#navbar {overflow: hidden;
+background-color: #000;}
+.content {padding: 16px;} 
+.sticky { position: fixed;
+
+top:0;
+width:100%;
 }
-nav a { color: #fff;
-    text-decoration: none;
-    display: block;
+.sticky + .content {
+  padding-top:60px;
 }
-nav a:hover {
-    background-color: #fff;
-    color: black;
-}
-img { 
-    width: 100%;
-height: 400px;
-margin:auto;
-padding-top:20px;
+
+div iframe {
+  width: 100%;
+   margin-left: auto;
+   margin-right: auto;}
+
+.gallery { width: 100%; height: 50vh;
+  background:url(https://media.istockphoto.com/photos/barber-using-scissors-and-comb-picture-id640274128?k=6&m=640274128&s=612x612&w=0&h=P-Wqs24lJBMKMKgfwXPWhWBlQLlGw0apd3tLCCibH4E=) no-repeat center center
+	 fixed;
 }
